--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/index.html
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/index.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient</title>
+    <title>Clinic Management</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client.styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+    <link href="assets/css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -27,6 +25,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
